# hxq_clink_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  三方机器人语音接入服务协议（外部） (1).docx  实时PCM流传输接口文档.docx
scripts/: baidu_probe.py  ws_client.py
src/hxq_clink_agent/: __init__.py  __main__.py  app.py  audio_buffer.py  auth.py  config.py  health.py  pipeline.py  protocol.py  session.py  ws_server.py
src/hxq_clink_agent/adapters/: __init__.py  asr_dashscope.py  asr_dashscope_streaming.py  asr_stub.py  audio_resampler.py  baidu_bce_auth.py  baidu_rtc_client.py  baidu_rtc_voice.py  factory.py  llm_openai.py  llm_stub.py  tts_dashscope.py  tts_stub.py
src/hxq_clink_agent/interfaces/: __init__.py  asr.py  asr_streaming.py  llm.py  tts.py  voice_to_voice.py
tests/: test_audio_buffer.py  test_auth.py  test_barge_in.py  test_concurrency_limit.py  test_pipeline.py  test_transfer.py
