[project]
name = "hxq-clink-agent"
version = "0.1.0"
description = "天润融通通话语音流实时推送 WebSocket Server (ASR-LLM-TTS)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.5.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "dashscope>=1.20.0",
]

[project.scripts]
hxq-clink-agent = "hxq_clink_agent.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hxq_clink_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
